<resources>
    <string name="app_name">WeatherApp</string>
    <string name="city_state">City, State</string>
    <string name="tenThanhPho">Tên Thành Phố</string>
    <string name="tenQuocGia">Tên Quốc Gia</string>
    <string name="nhietDo">Nhiệt độ</string>
    <string name="trangThai">Trạng Thái</string>
    <string name="todo">TODO</string>
    <string name="ngayCapNhat">Ngày cập nhật</string>
    <string name="ngayThang">Ngày Tháng</string>
    <string name="txtMaxTemp">Max Temp</string>
    <string name="txtMinTemp">Mix Temp</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
