<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="horizontal"
    android:weightSum="2">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textviewNgay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ngayThang"
            android:textColor="#f70a0a0b"
            android:textSize="25dp" />

        <TextView
            android:id="@+id/textviewTrangthai"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trangThai"
            android:textSize="22dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:weightSum="3">

            <ImageView
                android:id="@+id/imageTrangthai"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/textviewMaxTemp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txtMaxTemp"
                android:textSize="17dp" />

            <TextView
                android:id="@+id/textviewMinTemp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txtMinTemp"
                android:textSize="17dp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>