<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background= "#cdd6d6"
    tools:context="com.pnp.phongphung.weatherapp.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/edittextSearch"
            android:layout_width="275dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_marginStart="2dp"
            android:hint="@string/city_state" />

        <Button
            android:id="@+id/buttonSearch"
            android:text="OK"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:contextClickable="false" />
    </LinearLayout>

    <TextView
        android:id="@+id/textviewName"
        android:textColor="#290b04"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/tenThanhPho"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textviewCountry"
        android:textColor="#290b04"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/tenQuocGia"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/imageIcon"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_gravity="center"
        android:layout_marginTop="2dp"
         />

    <TextView
        android:id="@+id/textviewTemp"
        android:layout_gravity="center"
        android:textColor="#ea0c0c"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/nhietDo"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textviewStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="2dp"
        android:text="@string/trangThai"
        android:textSize="25sp" />

    <LinearLayout
        android:layout_marginTop="2dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/cloud" />

            <TextView
                android:id="@+id/textviewCloud"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Mây"
                android:textSize="15dp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/humidity" />

            <TextView
                android:id="@+id/textviewHumility"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Độ ẩm"
                android:textSize="15dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_marginTop="3dp"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/mill" />

            <TextView
                android:id="@+id/textviewWind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Gió"
                android:textSize="15dp" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/textviewDay"
        android:layout_gravity="center"
        android:textColor="#2929ce"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:text="@string/ngayCapNhat"
        android:textSize="20sp" />

    <Button
        android:id="@+id/buttonChangeActivity"
        android:textSize="25dp"
        android:layout_marginTop="25dp"
        android:text="Các ngày tiếp theo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>
